<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FitDiary</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="Fragment1">This is Fragment 1</string>
    <string name="FragmentTab1">This is ViewPager Fragment Tab 1</string>
    <string name="FragmentTab2">This is ViewPager Fragment Tab 2</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_main">MainActivity</string>

    <string-array name="list_items">
        <item>Napló</item>
        <item>Statisztika</item>
        <item>Edzésterv</item>
        <item>Edzésterv vásárlás</item>
        <item>Profil</item>
        <item>Emlékeztetők</item>
        <item>Infók</item>
        <item>Receptek</item>
        <item>Tippek</item>
        <item>Kilépés</item>
    </string-array>
    <string-array name="list_subtitles">
        <item>Bevitel subtitle</item>
        <item>Statisztika subtitle</item>
        <item>Edzésterv subtitle</item>
        <item>Edzésterv vásárlás subtitle</item>
        <item>Profil subtitle</item>
        <item>Emlékeztetők subtitle</item>
        <item>Infók subtitle</item>
        <item>Receptek subtitle</item>
        <item>Tippek subtitle</item>
        <item>Kilépés subtitle</item>
    </string-array>
    <string-array name="input_items">
        <item>Edzés</item>
        <item>Táplálék</item>
        <item>Mérés</item>
    </string-array>
    <string-array name="statistics_items">
        <item>Grafikon</item>
        <item>Táblázat</item>
    </string-array>
    
    <string-array name="register_spinner_sex">
        <item>Férfi</item>
        <item>Nő</item>
    </string-array>
    <string name="male">Férfi</string>

    <string name="title_activity_registration">Regisztráció</string>
    
    <string name="name">Név</string>
    <string name="password">Jelszó</string>
    <string name="confirm_password">Jelszó megerősítése</string>
    <string name="email">Email</string>
    <string name="birthday">Születésnap</string>
    <string name="sex">Nem</string>
    
    <string name="login">Bejelentkezés</string>
    <string name="registration">Regisztráció</string>
    <string name="login_without_registration">Belépés regisztráció nélkül</string>
    <string name="cancel">Mégsem</string>
    <string name="action_add">Hozzáadás</string>
    <string name="action_graph">Grafikon</string>
    <string name="action_table">Táblázat</string>
    
    <string name="language">hun</string>
    <string name="yesterday">Tegnap</string>
    <string name="today">Ma</string>
    <string name="tomorrow">Holnap</string>
    
    <string name="calorie">Kalória</string>
    <string name="fat">Zsír</string>
    <string name="carbohidrate">Szénhidrát</string>
    <string name="protein">Fehérje</string>

</resources>